tests/paczka1/small_fuzzy/48570722.err
Error in line 3: aTQS5oxR A782 73,9
Error in line 7: Y0RR S43 57,40
